--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,8 @@
       "Requirement already satisfied: idna<2.8,>=2.5 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from requests->plotly==3.3.0) (2.7)\n",
       "Installing collected packages: plotly\n",
       "  Found existing installation: plotly 3.1.0\n",
-      "    Uninstalling plotly-3.1.0:\n"
+      "    Uninstalling plotly-3.1.0:\n",
+      "      Successfully uninstalled plotly-3.1.0\n"
      ]
     }
    ],
@@ -221,20 +222,6 @@
     "\n",
     "To display the data with `plotly` we need to do a couple of things.  First, we installed plotly by going to our terminal and running `pip install plotly`.  Then to use the library, we import the `plotly` library into our notebook.  Once the library is loaded in our notebook, it's time to use it.  We create a new dictionary with keys of $x$ and $y$, with each key pointing to an array of the $x$ or $y$ values of our points.  We can pass through a list of traces, with each trace representing associated data."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
